fix title size on mobile

--- a/style.css
+++ b/style.css
@@ -21,5 +21,5 @@ div#title {
 	text-align: center;
 }
 @media only screen and (max-device-width: 700px) {
-	body { font-size: 16px; }
+	div#title { font-size: 50%; }
 }
